import { SheetEntity, numericCell, parseNumericCell, type SheetRecord } from './SheetEntity'

export const TRANSACTION_TYPES = ['income', 'expense'] as const

export type TransactionType = (typeof TRANSACTION_TYPES)[number]

/** Expense categories; income rows generated from paid jobs use `job`. */
export const EXPENSE_CATEGORIES = [
  'filament',
  'consumable',
  'equipment',
  'electric',
  'maintenance',
  'other',
] as const

export type ExpenseCategory = (typeof EXPENSE_CATEGORIES)[number]

export class Transaction extends SheetEntity {
  id = ''
  /** `YYYY-MM-DD` day string. */
  date = ''
  type: TransactionType = 'expense'
  /** Sign convention: income positive, expense negative. */
  amount: number | undefined = undefined
  category = ''
  concept = ''
  /** `job` when generated by paying a job, else ''. */
  refType = ''
  refId = ''
  clientId = ''
  notes = ''

  isIncome(): boolean {
    return this.type === 'income'
  }

  isExpense(): boolean {
    return this.type === 'expense'
  }

  static fromRecord(record: SheetRecord): Transaction {
    const transaction = new Transaction()
    transaction.id = record.id ?? ''
    transaction.date = record.date ?? ''
    transaction.type = record.type === 'income' ? 'income' : 'expense'
    transaction.amount = parseNumericCell(record.amount ?? '')
    transaction.category = record.category ?? ''
    transaction.concept = record.concept ?? ''
    transaction.refType = record.ref_type === 'job' ? 'job' : ''
    transaction.refId = record.ref_id ?? ''
    transaction.clientId = record.client_id ?? ''
    transaction.notes = record.notes ?? ''
    transaction.archived = record.archived ?? ''
    transaction.deleted = record.deleted ?? ''
    return transaction
  }

  toRecord(): SheetRecord {
    return {
      id: this.id,
      date: this.date,
      type: this.type,
      amount: numericCell(this.amount),
      category: this.category,
      concept: this.concept,
      ref_type: this.refType,
      ref_id: this.refId,
      client_id: this.clientId,
      notes: this.notes,
      archived: this.archived,
      deleted: this.deleted,
    }
  }
}
