Table clients {
  id varchar [pk]
  name varchar [not null]
  email varchar
  phone varchar
  notes varchar
  preferred_contact varchar
  lead_source varchar
  address varchar
  created_at varchar [not null]
  archived varchar
  deleted varchar
}

Table crm_notes {
  id varchar [pk]
  entity_type varchar [not null, note: 'client | job']
  entity_id varchar [not null]
  body varchar [not null]
  referenced_entity_ids varchar
  severity varchar [note: 'info | danger | warning | success | primary | secondary']
  created_at varchar [not null]
  archived varchar
  deleted varchar
}

Table tags {
  id varchar [pk]
  name varchar [not null]
  created_at varchar [not null]
  archived varchar
  deleted varchar
}

Table tag_links {
  id varchar [pk]
  tag_id varchar [not null, ref: > tags.id]
  entity_type varchar [not null, note: 'client | job']
  entity_id varchar [not null]
  created_at varchar [not null]
  archived varchar
  deleted varchar
}

Table jobs {
  id varchar [pk]
  client_id varchar [not null, ref: > clients.id]
  description varchar [not null]
  status varchar [not null, note: 'draft | in_progress | delivered | paid | cancelled']
  price numeric
  board_order numeric
  created_at varchar [not null]
  archived varchar
  deleted varchar
  due_date varchar [note: 'v3: optional YYYY-MM-DD; falls back to created_at']
}

Table pieces {
  id varchar [pk]
  job_id varchar [not null, ref: > jobs.id]
  name varchar [not null]
  status varchar [not null, note: 'pending | done | failed']
  price numeric
  units numeric
  created_at varchar [not null]
  archived varchar
  deleted varchar
}

Table piece_items {
  id varchar [pk]
  piece_id varchar [not null, ref: > pieces.id]
  inventory_id varchar [not null, ref: > inventory.id]
  quantity numeric [not null]
  archived varchar
  deleted varchar
}

Table inventory {
  id varchar [pk]
  type varchar [not null, note: 'filament | consumable | equipment']
  name varchar [not null]
  qty_current numeric [not null]
  warn_yellow numeric [not null]
  warn_orange numeric [not null]
  warn_red numeric [not null]
  created_at varchar [not null]
  archived varchar
  deleted varchar
  colour varchar [note: 'v3: optional #RRGGBB swatch']
}

Table lots {
  id varchar [pk]
  inventory_id varchar [not null, ref: > inventory.id]
  transaction_id varchar [not null, ref: > transactions.id]
  quantity numeric [not null]
  amount numeric [not null]
  created_at varchar [not null]
  archived varchar
  deleted varchar
}

Table transactions {
  id varchar [pk]
  date varchar [not null]
  type varchar [not null, note: 'income | expense']
  amount numeric [not null]
  category varchar [not null, note: 'filament | consumable | equipment | electric | maintenance | other']
  concept varchar [not null]
  ref_type varchar [note: 'job | empty']
  ref_id varchar
  client_id varchar [ref: > clients.id]
  notes varchar
  archived varchar
  deleted varchar
}

Table audit_log {
  id varchar [pk]
  timestamp varchar [not null]
  actor varchar [not null]
  entity_name varchar [not null, note: 'client | job | piece | piece_item | inventory | lot | transaction | purchase | tag | tag_link | crm_note | client_note | job_note']
  entity_id varchar [not null]
  action varchar [not null, note: 'create | update | archive | delete | restore']
  before_json varchar [not null]
  after_json varchar [not null]
  fieldsChanged varchar [not null]
  parent_entity_name varchar [note: 'client | job | piece | piece_item | inventory | lot | transaction | purchase | tag | tag_link | crm_note | client_note | job_note']
  parent_entity_id varchar
}

Ref: jobs.client_id > clients.id
Ref: pieces.job_id > jobs.id
Ref: piece_items.piece_id > pieces.id
Ref: piece_items.inventory_id > inventory.id
Ref: lots.inventory_id > inventory.id
Ref: lots.transaction_id > transactions.id
Ref: transactions.client_id > clients.id
Ref: tag_links.tag_id > tags.id
